Homework 2.8 Доработка